
2008-11-04  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #9734: User selector in Web>Access doesn't work (thanks to Andreas Kundoch)
	* Fixed bug #9717: t3lib_parsehtml_proc removes valid attributes of SPAN tags

2008-11-04  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9599: felogin - Enable Caching "USER" instead of "USER_INT" (thanks to Dmitry Dulepov & Steffen Kamper)
	* Added feature #9661: Extend condition operators for globalVar (thanks to Steffen Kamper)
	* Cleanup: Specified deprecated statements
	* Follow-up to feature #9661: Re-enable matching empty globalVars

2008-11-03  Oliver Hader  <oliver@typo3.org>

	* Added feature #9654: Enable includeLibs also for USER and COA objects
	* Fixed bug #9724: Editing shortcuts does not work anymore
	* Fixed bug #9286: Use native JSON-methods instead of 3rd party JSON script (thanks to Steffen Kamper)

2008-11-01  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8715: non-admins can not import pages from their own directory (thanks to Johannes Pieper)

2008-11-01  Oliver Hader  <oliver@typo3.org>

	* Added feature #6637: Integrate possibility to reverse order of rootline HMENU (thanks to Ralf Hettinger)
	* Fixed bug #9715: Editing records with OpenDocs enabled does not work
	* Added feature #9094: Make simulate static a system extension (patch by Benjamin Mack)
	* Fixed bug #9632: Multiple fileuploads into folders with special characters (umlauts) not possible (thanks to Marcus Krause)

2008-10-31  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #6626: config.fileTarget for link target on files (thanks to Ralf Hettinger)
	* Added feature #3787: New option TSFE.jumpURL_HTTPStatusCode = 30x (thanks to Stefan Geith)

2008-10-31  Ingo Renner  <ingo@typo3.org>

	* cleanup: removed the include for an interface that is loaded in backend.php already and therefore is present always

2008-10-31  Oliver Hader  <oliver@typo3.org>
