@@ -1,3 +1,6 @@
+2008-11-04  Ingo Renner  <ingo@typo3.org>
+
+	* Fixed bug #9681: the Wrap for forgotMessage in the subpart ###TEMPLATE_FORGOT### does not work (credits Steffen Kamper)
 
 2008-11-04  Martin Kutschker  <masi@typo3.org>
 
